<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.nghiatv.crazymath.MainActivity">

    <TextView
        android:id="@+id/txtGameName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:shadowColor="@android:color/black"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="2"
        android:text="@string/game_name"
        android:textColor="@color/text"
        android:textSize="44sp"
        android:textStyle="bold|italic" />

    <TextView
        android:gravity="center"
        android:id="@+id/txtBestScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/best_score"
        android:textColor="@color/text"
        android:textSize="36sp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:textStyle="bold" />

    <Button
        android:gravity="center"
        android:id="@+id/btnPlay"
        android:text="@string/play"
        android:background="@drawable/btn_red"
        android:textColor="@color/text"
        android:textStyle="bold"
        android:textSize="40sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:id="@+id/btnMore"
        android:text="@string/more"
        android:background="@drawable/btn_green"
        android:textColor="@color/text"
        android:textStyle="bold"
        android:textSize="40sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
