<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nghiatv.crazymath.OverActivity">

    <TextView
        android:id="@+id/txtGameOver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:shadowColor="@color/darkRed"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="2"
        android:text="@string/game_over"
        android:textColor="@color/lightRed"
        android:textSize="60sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtYourScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/your_score"
        android:textColor="@color/text"
        android:textSize="36sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnTryAgain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_red"
        android:gravity="center"
        android:text="@string/try_again"
        android:textColor="@color/text"
        android:textSize="40sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_green"
        android:gravity="center"
        android:text="@string/home"
        android:textColor="@color/text"
        android:textSize="40sp"
        android:textStyle="bold" />
</LinearLayout>
